<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="#34393f">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="忘记密码"
            android:textColor="#fff" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/m_insert_phone_icon"
        android:layout_width="36px"
        android:layout_height="36px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="215px"
        android:src="@mipmap/shoujihao2x" />

    <ImageView
        android:id="@+id/m_insert_yzm_icon"
        android:layout_width="36px"
        android:layout_height="36px"
        android:layout_below="@id/m_insert_phone_icon"
        android:layout_marginLeft="80px"
        android:layout_marginTop="79px"
        android:src="@mipmap/yanzhenma2x" />

    <ImageView
        android:id="@+id/m_insert_pwd_icon"
        android:layout_width="36px"
        android:layout_height="36px"
        android:layout_below="@id/m_insert_yzm_icon"
        android:layout_marginLeft="80px"
        android:layout_marginTop="79px"
        android:src="@mipmap/raccount2x" />

    <EditText
        android:id="@+id/mInsert_phone"
        android:layout_width="530px"
        android:layout_height="80px"
        android:layout_alignLeft="@+id/mInsert_yzm"
        android:layout_alignStart="@+id/mInsert_yzm"
        android:layout_below="@+id/mInsert_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195px"
        android:digits="0123456789"
        android:hint="@string/insert_phone"
        android:maxLength="11"
        android:textSize="13sp" />

    <View
        android:id="@+id/mShu"
        android:layout_width="1px"
        android:layout_height="22px"
        android:layout_below="@+id/mInsert_name"
        android:layout_marginLeft="505px"
        android:layout_marginRight="30px"
        android:layout_marginTop="220px"
        android:background="#d3d3d3" />

    <TextView
        android:id="@+id/repwd_getyzm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mInsert_name"
        android:layout_marginTop="215px"
        android:layout_toRightOf="@id/mShu"
        android:text="@string/getyzm"
        android:textColor="#facf20"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/mInsert_yzm"
        android:layout_width="530px"
        android:layout_height="80px"
        android:layout_below="@id/mInsert_phone"
        android:layout_marginLeft="130px"
        android:layout_marginTop="35px"
        android:hint="@string/insert_yzm"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/mInsert_pwd"
        android:layout_width="530px"
        android:layout_height="80px"
        android:layout_below="@id/mInsert_yzm"
        android:layout_marginLeft="130px"
        android:layout_marginTop="35px"
        android:hint="@string/insert_newpwd"
        android:inputType="textPassword"
        android:textSize="13sp" />

    <Button
        android:id="@+id/find_commit"
        android:layout_width="650px"
        android:layout_height="80px"
        android:layout_below="@id/mInsert_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75px"
        android:background="#00c899"
        android:text="@string/submit"
        android:textColor="#fff" />
</com.zhy.autolayout.AutoRelativeLayout>
